# API-rust-prueba

./: Cargo.toml  README.md  diesel.toml
migrations/2024-09-17-033711_first-migration/: up.sql
src/: adapters.rs  entities.rs  main.rs  schema.rs  use_cases.rs
src/clients/: adapters.rs  entities.rs  mod.rs
