[package]
name = "diesel-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = { version = "2.2.0", features = ["sqlite", "returning_clauses_for_sqlite_3_35", "chrono"] }
# build libsqlite3 as part of the build process
# uncomment this line if you run into setup issues
# libsqlite3-sys = { version = "0.30", features = ["bundled"] }
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
actix-web = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.1"
